--- a/hp/dlpack-metal-ndarray/genindex.html
+++ b/hp/dlpack-metal-ndarray/genindex.html
@@ -798,6 +798,8 @@
         <li><a href="autoapi/gstaichi/lang/struct/index.html#gstaichi.lang.struct.StructField.dual">(gstaichi.lang.struct.StructField attribute)</a>
 </li>
       </ul></li>
+      <li><a href="autoapi/gstaichi/lang/misc/index.html#gstaichi.lang.misc.dump_compile_config">dump_compile_config() (in module gstaichi.lang.misc)</a>
+</li>
       <li><a href="autoapi/gstaichi/lang/snode/index.html#gstaichi.lang.snode.SNode.dynamic">dynamic() (gstaichi.lang.snode.SNode method)</a>
 </li>
   </ul></td>
