deploy: 12e772e192acaad19b2825a7bd0e7eba274c7b8b

--- a/duburcqa/speedup_process_args/_modules/gstaichi/lang/kernel_impl.html
+++ b/duburcqa/speedup_process_args/_modules/gstaichi/lang/kernel_impl.html
@@ -752,8 +752,10 @@
                 <span class="k">else</span><span class="p">:</span>
                     <span class="k">raise</span> <span class="n">GsTaichiSyntaxError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Unexpected argument &#39;</span><span class="si">{</span><span class="n">key</span><span class="si">}</span><span class="s2">&#39;.&quot;</span><span class="p">)</span>
     <span class="k">elif</span> <span class="n">num_missing_args</span><span class="p">:</span>
-        <span class="k">for</span> <span class="n">arg_meta</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">arg_metas_expanded</span><span class="p">[</span><span class="n">num_args</span><span class="p">:]:</span>
-            <span class="k">if</span> <span class="n">fused_args</span> <span class="ow">is</span> <span class="n">_ARG_EMPTY</span><span class="p">:</span>
+        <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">num_args</span><span class="p">,</span> <span class="n">num_arg_metas</span><span class="p">):</span>
+            <span class="n">arg</span> <span class="o">=</span> <span class="n">fused_args</span><span class="p">[</span><span class="n">i</span><span class="p">]</span>
+            <span class="k">if</span> <span class="n">fused_args</span><span class="p">[</span><span class="n">i</span><span class="p">]</span> <span class="ow">is</span> <span class="n">_ARG_EMPTY</span><span class="p">:</span>
+                <span class="n">arg_meta</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">arg_metas_expanded</span><span class="p">[</span><span class="n">i</span><span class="p">]</span>
                 <span class="k">raise</span> <span class="n">GsTaichiSyntaxError</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Missing argument &#39;</span><span class="si">{</span><span class="n">arg_meta</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s2">&#39;.&quot;</span><span class="p">)</span>
 
     <span class="k">return</span> <span class="nb">tuple</span><span class="p">(</span><span class="n">fused_args</span><span class="p">)</span>
