deploy: 903f93d6710bd254e553f5a0ddfa173dc9049423

--- a/_modules/gstaichi/types/ndarray_type.html
+++ b/_modules/gstaichi/types/ndarray_type.html
@@ -460,6 +460,10 @@
         <span class="c1"># needed for pyright</span>
         <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">()</span>
 
+    <span class="k">def</span><span class="w"> </span><span class="nf">to_dlpack</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">object</span><span class="p">:</span>
+        <span class="c1"># needed for pyright</span>
+        <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">()</span>
+
 
 <div class="viewcode-block" id="ndarray">
 <a class="viewcode-back" href="../../../autoapi/gstaichi/types/ndarray_type/index.html#gstaichi.types.ndarray_type.ndarray">[docs]</a>
