--- a/hp/remove-aws-uploads/_modules/gstaichi/lang/field.html
+++ b/hp/remove-aws-uploads/_modules/gstaichi/lang/field.html
@@ -619,6 +619,10 @@
 <div class="viewcode-block" id="ScalarField.to_dlpack">
 <a class="viewcode-back" href="../../../autoapi/gstaichi/lang/field/index.html#gstaichi.lang.field.ScalarField.to_dlpack">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">to_dlpack</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Note: caller is responsible for calling ti.sync() between modifying the field, and</span>
+<span class="sd">        reading it.</span>
+<span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">impl</span><span class="o">.</span><span class="n">get_runtime</span><span class="p">()</span><span class="o">.</span><span class="n">prog</span><span class="o">.</span><span class="n">field_to_dlpack</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_snode</span><span class="o">.</span><span class="n">ptr</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">)</span></div>
 
 
