--- a/duburcqa/fix_cuda_clock_expose/_modules/gstaichi/lang/simt/timer.html
+++ b/duburcqa/fix_cuda_clock_expose/_modules/gstaichi/lang/simt/timer.html
@@ -318,6 +318,12 @@
 <div class="viewcode-block" id="cuda_clock_i64">
 <a class="viewcode-back" href="../../../../autoapi/gstaichi/lang/simt/timer/index.html#gstaichi.lang.simt.timer.cuda_clock_i64">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">cuda_clock_i64</span><span class="p">():</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Returns the value of a per-multiprocessor counter that is incremented every clock cycle.</span>
+
+<span class="sd">    See official documentation for details:</span>
+<span class="sd">    https://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#time-function</span>
+<span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">impl</span><span class="o">.</span><span class="n">call_internal</span><span class="p">(</span><span class="s2">&quot;cuda_clock_i64&quot;</span><span class="p">,</span> <span class="n">with_runtime_context</span><span class="o">=</span><span class="kc">False</span><span class="p">)</span></div>
 
 
